WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
188981
Fix gcc compilation warnings after
r235230
https://bugs.webkit.org/show_bug.cgi?id=188981
Summary
Fix gcc compilation warnings after r235230
Alejandro G. Castro
Reported
2018-08-27 04:02:40 PDT
We are using pragma clang to avoid unused-parameter warnings in the libwebrtc directories, gcc does not understand this pragmas.
Attachments
Patch
(9.60 KB, patch)
2018-08-27 04:09 PDT
,
Alejandro G. Castro
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2018-08-27 04:09:17 PDT
Created
attachment 348130
[details]
Patch
WebKit Commit Bot
Comment 2
2018-08-28 00:49:22 PDT
Comment on
attachment 348130
[details]
Patch Clearing flags on attachment: 348130 Committed
r235421
: <
https://trac.webkit.org/changeset/235421
>
WebKit Commit Bot
Comment 3
2018-08-28 00:49:24 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-08-28 00:50:48 PDT
<
rdar://problem/43788293
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug