Fix gcc compilation warnings after r235230 https://bugs.webkit.org/show_bug.cgi?id=188981

Patch by Alejandro G. Castro <alex@igalia.com> on 2018-08-28
Reviewed by Eric Carlson.

Replace the pragma clang with pragma GCC, it is understood by
clang and gcc.

* Modules/mediastream/libwebrtc/LibWebRTCDataChannelHandler.h:
* Modules/mediastream/libwebrtc/LibWebRTCMediaEndpoint.h:
* platform/mediastream/RealtimeIncomingAudioSource.h:
* platform/mediastream/RealtimeIncomingVideoSource.h:
* platform/mediastream/RealtimeOutgoingAudioSource.h:
* platform/mediastream/RealtimeOutgoingVideoSource.h:
* platform/mediastream/libwebrtc/LibWebRTCAudioModule.h:
* platform/mediastream/libwebrtc/LibWebRTCProvider.cpp:
* platform/mediastream/libwebrtc/LibWebRTCProvider.h:
* testing/MockLibWebRTCPeerConnection.h:

Canonical link: https://commits.webkit.org/204075@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235421 268f45cc-cd09-0410-ab3c-d52691b4dbfc