Source/WebCore/platform/mediastream/RealtimeIncomingAudioSource.h
@@ -35,12 +35,12 @@
 #include "LibWebRTCMacros.h"
 #include "RealtimeMediaSource.h"
 
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wunused-parameter"
+#pragma GCC diagnostic push
+#pragma GCC diagnostic ignored "-Wunused-parameter"
 
 #include <webrtc/api/mediastreaminterface.h>
 
-#pragma clang diagnostic pop
+#pragma GCC diagnostic pop
 
 #include <wtf/RetainPtr.h>
 
