Source/WebCore/platform/mediastream/RealtimeOutgoingAudioSource.h
@@ -35,12 +35,12 @@
 #include "MediaStreamTrackPrivate.h"
 #include "Timer.h"
 
-#pragma clang diagnostic push
-#pragma clang diagnostic ignored "-Wunused-parameter"
+#pragma GCC diagnostic push
+#pragma GCC diagnostic ignored "-Wunused-parameter"
 
 #include <webrtc/api/mediastreaminterface.h>
 
-#pragma clang diagnostic pop
+#pragma GCC diagnostic pop
 
 #include <wtf/ThreadSafeRefCounted.h>
 
